--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <link href="css/font-awesome.css" rel="stylesheet">
     <!-- //font-awesome-icons -->
     <!-- /Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700" rel="stylesheet">
     <!-- //Fonts -->
 
 </head>
@@ -75,7 +75,7 @@
 
             <!-- banner -->
             <div class="banner-info-w3ls">
-                <h1>Most Wanted It Girl Look
+                <h1>THE PRETTY GIRL JingYuan Li
                 </h1>
                 <a href="#about" class="scroll">
                     <div class="icon-scroll">
