--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                 </div>
             </div>
             <div class="copyright text-center mb-4">
-                <p>Copyright &copy; 2019.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+                <p>Copyright &copy; 2019.Ycll PersonalAll rights reserved</p>
             </div>
             <a href="#home" class="move-top scroll"><span class="fa fa-angle-double-up" aria-hidden="true"></span></a>
         </div>
